// ProtoAck.proto
syntax = "proto3";

package com.gm.link.common.domain.protobuf;

// ProtoAck.proto
option java_package = "com.gm.link.common.domain.protobuf";
option java_multiple_files = true;
option java_outer_classname = "ProtoAckOuter";

message ProtoAck {
  fixed32 magic = 1;        // 固定4字节魔数(0xDEADBEEF)
  int32 version = 2;       // 协议版本
  int32 cmd = 3;           // 2字节命令字,0x0001-业务消息，0x0002-ack，0x0003-心跳

  string original_msg_id = 4; // 需要确认的原消息ID
  int32 status = 5;          // 2字节状态码，0-成功，其他-错误码
  optional string error_msg = 6;       // [可选]错误描述

  // 扩展校验字段
  fixed32 check_sum = 7;      // 对原始消息ID的校验,4字节校验码(CRC32)
}