// ProtoHB.proto
syntax = "proto3";

package com.gm.link.common.domain.protobuf;

// ProtoHB.proto
option java_package = "com.gm.link.common.domain.protobuf";
option java_multiple_files = true;
option java_outer_classname = "ProtoHBOuter";

message ProtoHB {
  fixed32 magic = 1;        // 固定4字节魔数(0xDEADBEEF)
  int32 version = 2;       // 协议版本
  int32 cmd = 3;           // 2字节命令字,0x0001-业务消息，0x0002-ack，0x0003-心跳

  string from_machine_id = 4; // 发送端机器标识
  string to_machine_id = 5;   // 接收端机器标识

  // 心跳扩展信息
  int64 timestamp = 6;        // 心跳发送时间
  fixed32 check_sum = 7;      // 校验码(时间戳+机器ID)
}